--- a/pam_ihosts.8
+++ b/pam_ihosts.8
@@ -17,6 +17,10 @@ pam_ihosts.so [user=<username>] [syslog] [allow\-device=<device>] [allow\-mac=<m
 pam\fBi\fPihosts considers a user's remote ip to prevent/allow login by users who have already provided the correct credentials. 
 .P
 pam_ihosts.so can use the 'stats' files that regional internet registrars provide in order to look up the registrar and country that an IP is registered to, allowing a form of crude geo-location.
+.P
+\fbBeware\fP. pam_ihosts.so denies login by default for any user that it's specified to handle. Options must be supplied to indicate the mac-address, ip-address, country-code or region of hosts that are allowed to log in.
+
+
 .SH OPTIONS
 
 .P
