--- a/pam_ihosts.8
+++ b/pam_ihosts.8
@@ -67,17 +67,17 @@ A comma-separated list of fnmatch patterns that match region strings looked up i
 .TP
 .B
 \fIregion-files=[paths]\fP
-A comma-separated list of paths to files containing IP registrar assignments. For more details see "REGIONS" below.
+A comma-separated list of paths to files containing IP registrar assignments. Each path can be prefixed with "mmap:" in which case the program will use a shared mmap of the file (see MMAPPED FILES below). For more details see "REGIONS" below.
 
 .TP
 .B
 \fIblacklist=[paths]\fP
-A comma-separated list of paths to files containing IP addresses, MAC addresses or hostnames that are \fBblacklisted\fP (denied login). The files must contain one item (ip address) per line.
+A comma-separated list of paths to files containing IP addresses, MAC addresses or hostnames that are \fBblacklisted\fP (denied login). The files must contain one item (ip address) per line. Each path can be prefixed with "mmap:" in which case the program will use a shared mmap of the file (see MMAPPED FILES below).
 
 .TP
 .B
 \fIwhitelist=[paths]\fP
-A comma-separated list of paths to files containing IP addresses, MAC addresses or hostnames that are \fBwhitelisted\fP (allowed login). The files must contain one item (ip address) per line.
+A comma-separated list of paths to files containing IP addresses, MAC addresses or hostnames that are \fBwhitelisted\fP (allowed login). The files must contain one item (ip address) per line. Each path can be prefixed with "mmap:" in which case the program will use a shared mmap of the file (see MMAPPED FILES below).
 
 .TP
 .B
@@ -109,6 +109,11 @@ http://ftp.apnic.net/stats/apnic/delegated-apnic-latest             # Asia Pacif
 
 .P
 Blacklist/whitelist files contain IP addresses, hostnames, or MAC addresses that are either denied or allowed login. One item per line. All three types of item can be present in the same file. Blacklist files are checked first, and then can be overridden with whitelist files. As pam_ihosts denies login by default, so a whitelist file can be used on its own. To use only a blacklist file, one would have to specify "allow-ip\=*" and then specify a blacklist file, which would have the effect of allowing everything except those things in the blacklist file.
+
+.SH MMAPPED FILES
+
+.P
+Blacklist, whitelist and region file paths can be prefixed with "mmap:" In this case pam_ihosts uses a shared memory mapping of the file. Provided that some other program currently has the file mapped, pam_ihosts will not have to load the file from disk, as it will already be available as shared memory. This can significantly improve performance for large files, at the cost of some memory. If no other program has the file mmapped, then pam_ihosts loads it into shared memory, but has to pay the performance cost of loading it from disk. Therefore, for this system to deliver a benefit, some long-lived program has to keep the files mapped.
 
 .SH EXAMPLES
 
@@ -156,6 +161,16 @@ Same as above, but perhaps more efficient, only look up regions in the apnic fil
 account    required  pam_ihosts.so user\=* region\-files=/etc/ip\-lists/delegated\-apnic\-latest allow\-region=apnic:*
 .fi
 .ad b
+
+.P
+For all users, allow login only from Asia Pacific IPs. Use mmap shared memory for the afrinic and lacnic files.
+
+.nf
+
+account    required  pam_ihosts.so user\=* region\-files=mmap:/etc/ip\-lists/delegated\-afrinic\-latest,mmap:/etc/ip\-lists/delegated\-lacnic\-latest,/etc/ip\-lists/delegated\-apnic\-latest,/etc/ip\-lists/delegated\-ripencc\-latest allow\-region=apnic:*
+.fi
+.ad b
+
 
 .SH SEE ALSO
 
